[workspace]
resolver = "2"
members = ["lib"]

[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "./lib" }
hot-lib-reloader = { version = "^0.5", optional = true }

[features]
default = ["reload"]
reload = ["dep:hot-lib-reloader"]
